Fix mobile layout issues

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -73,6 +73,7 @@ body, html
     width: 100%
     position: relative
     padding-top: golden-ratio(1rem,  5)
+    padding-bottom: 1rem
     @include respond-to(800)
       width: 38%
   .right
@@ -106,7 +107,7 @@ body, html
     position: absolute
     top: 0
     right: 50%
-    margin-right: -((golden-ratio(1rem,  5)/1.5))
+    margin-right: -6.5rem
     border-radius: 50%
     z-index: 98
     background-size: cover
